this is what ive got

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -127,7 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView_register_car_number"
-            android:text="Car Name*"
+            android:text="Car Number*"
             android:textColor="#555555"
             android:textSize="24sp"
             android:padding="6dp"
