--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,5 +1,4 @@
-b
-    <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +6,7 @@ b
     android:layout_height="match_parent"
     tools:context=".UserProfileActivity"
     android:background="@color/purple_200">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,6 +47,7 @@ b
                 android:layout_margin="15dp"
                 android:background="@color/white">
 
+
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
@@ -70,6 +71,34 @@ b
                     android:background="@color/purple_700"
                     android:id="@+id/divider1"/>
 
+
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/phone_24"
+                    android:id="@+id/profile_contact"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/divider2"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/show_contact"
+                    android:layout_alignStart="@+id/profile_email"
+                    android:hint="Loading"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/divider2"
+                    android:layout_marginStart="50dp"
+                    android:textSize="24dp"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/profile_contact"
+                    android:background="@color/purple_700"
+                    android:id="@+id/divider3"/>
 
                 <ImageView
                     android:layout_width="25dp"
@@ -98,10 +127,34 @@ b
                     android:background="@color/purple_700"
                     android:id="@+id/divider2"/>
 
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/people_24"
+                    android:id="@+id/profile_role"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/divider3"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/show_role"
+                    android:layout_alignStart="@+id/profile_email"
+                    android:hint="Loading"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/divider3"
+                    android:layout_marginStart="50dp"
+                    android:textSize="24dp"/>
 
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Animation.Design.BottomSheetDialog"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:elevation="10dp"
+                    android:id="@+id/progressbar"/>
             </RelativeLayout>
-
 
     </LinearLayout>
 </ScrollView>
