--- a/app/src/main/res/layout/activity_driver_dashboard.xml
+++ b/app/src/main/res/layout/activity_driver_dashboard.xml
@@ -10,16 +10,20 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/driver_nav"
-        android:layout_gravity="start"
-        app:itemIconTint="@color/purple_500"
-        app:itemTextColor="@color/black"
-        app:headerLayout="@layout/header"
-        app:menu="@menu/driver_menu"/>
 
+
+
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/driver_nav"
+            android:layout_gravity="start"
+            app:itemIconTint="@color/purple_500"
+            app:itemTextColor="@color/black"
+            app:headerLayout="@layout/header"
+            app:menu="@menu/driver_menu"
+            android:fitsSystemWindows="true"
+            tools:openDrawer="start"/>
     </RelativeLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
