--- a/app/src/main/res/layout/activity_driver_dashboard.xml
+++ b/app/src/main/res/layout/activity_driver_dashboard.xml
@@ -6,24 +6,41 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     tools:context=".ParentDashboardActivity">
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:id="@+id/toolbar"
+            android:elevation="4dp"
+            android:background="@color/teal_700"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            />
 
+         <FrameLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:id="@+id/fragment_container"/>
 
-        <com.google.android.material.navigation.NavigationView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/driver_nav"
-            android:layout_gravity="start"
-            app:itemIconTint="@color/purple_500"
-            app:itemTextColor="@color/black"
-            app:headerLayout="@layout/header"
-            app:menu="@menu/driver_menu"
-            android:fitsSystemWindows="true"
-            tools:openDrawer="start"/>
-    </RelativeLayout>
+    </LinearLayout>
+             <com.google.android.material.navigation.NavigationView
+                 android:id="@+id/driver_nav"
+                 android:layout_width="wrap_content"
+                 android:layout_height="match_parent"
+                 android:layout_gravity="start"
+                 android:fitsSystemWindows="true"
+                 app:headerLayout="@layout/header"
+                 app:itemIconTint="@color/purple_500"
+                 app:itemTextColor="@color/black"
+                 app:menu="@menu/driver_menu"
+                 tools:openDrawer="start" />
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
