--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="lime">#00FF00</color>
     <color name="dark_green">#006400</color>
     <color name="light_gray">#D3D3D3</color>
+    <color name="navy_blue">#046CBC</color>
 
 
 </resources>
