--- a/app/src/main/res/layout/activity_parent_dashboard.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard.xml
@@ -1,61 +1,169 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParentDashboardActivity">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    tools:context=".ParentDashboardActivity"
+    android:background="@drawable/bg_view_1">
 
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/toolbar"
-        android:background="@color/light_gray"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:popupTheme="@style/Theme.AppCompat.Light"/>
+   <View
+       android:id="@+id/top_view"
+       android:layout_width="match_parent"
+       android:layout_height="200dp"
+       android:background="@drawable/bg_view"/>
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragment"/>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+   <GridLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:rowCount="3"
+       android:columnCount="2"
+       android:layout_marginLeft="24dp"
+       android:layout_marginRight="25dp"
+       android:layout_marginTop="0dp"
+       android:layout_below="@id/top_view">
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottomApp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:backgroundTint="@color/light_gray"
-            app:fabCradleMargin="10dp"
-            app:fabCradleRoundedCornerRadius="50dp">
+   <!-- Card 1 -->
+   <androidx.cardview.widget.CardView
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+       app:cardCornerRadius="15dp"
+       android:layout_row="0"
+       android:layout_column="0"
+       android:layout_margin="12dp"
+       app:cardElevation="12dp"/>
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottomnav"
+
+      <!-- Card 2 -->
+      <androidx.cardview.widget.CardView
+          android:layout_width="150dp"
+          android:layout_height="150dp"
+          app:cardCornerRadius="15dp"
+          android:layout_row="0"
+          android:layout_column="0"
+          android:layout_margin="12dp"
+          app:cardElevation="12dp">
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/otp"
+                android:layout_gravity="center_horizontal"/>
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                app:labelVisibilityMode="labeled"
-                app:menu="@menu/main_menu">
+                android:text="Send  Otp"
+                android:layout_gravity="center_horizontal"
+                android:textSize="25sp"
+                android:fontFamily="@font/almendra_bold_italic"/>
+         </LinearLayout>
+      </androidx.cardview.widget.CardView>
 
-            </com.google.android.material.bottomnavigation.BottomNavigationView>
+      <!-- Card 3 -->
+      <androidx.cardview.widget.CardView
+          android:layout_width="150dp"
+          android:layout_height="150dp"
+          app:cardCornerRadius="15dp"
+          android:layout_row="1"
+          android:layout_column="0"
+          android:layout_margin="12dp"
+          app:cardElevation="12dp">
 
-        </com.google.android.material.bottomappbar.BottomAppBar>
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/ic_car"
+                android:layout_gravity="center_horizontal"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Track Driver Activities"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:textSize="25sp"
+                android:fontFamily="@font/almendra_bold_italic"/>
+         </LinearLayout>
+      </androidx.cardview.widget.CardView>
 
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+      <androidx.cardview.widget.CardView
+          android:layout_width="150dp"
+          android:layout_height="150dp"
+          app:cardCornerRadius="15dp"
+          android:layout_row="0"
+          android:layout_column="1"
+          android:layout_margin="12dp"
+          app:cardElevation="12dp">
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/confirm_activity"
+                android:layout_gravity="center_horizontal"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Confirm "
+                android:layout_gravity="center_horizontal"
+                android:textSize="25sp"
+                android:fontFamily="@font/almendra_bold_italic"/>
+         </LinearLayout>
+      </androidx.cardview.widget.CardView>
+
+      <androidx.cardview.widget.CardView
+          android:layout_width="150dp"
+          android:layout_height="150dp"
+          app:cardCornerRadius="15dp"
+          android:layout_row="1"
+          android:layout_column="1"
+          android:layout_margin="12dp"
+          app:cardElevation="12dp">
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/location"
+                android:layout_gravity="center_horizontal"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Maps and Locatoins"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"
+                android:textSize="25sp"
+                android:fontFamily="@font/almendra_bold_italic"/>
+         </LinearLayout>
+      </androidx.cardview.widget.CardView>
+
+
+   </GridLayout>
+
+
 
 
 
 
 </RelativeLayout>
 
-</androidx.drawerlayout.widget.DrawerLayout>
+
