--- a/app/src/main/res/drawable/bg_view_1.xml
+++ b/app/src/main/res/drawable/bg_view_1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <gradient android:type="linear" android:angle="18"
-        android:startColor="#F2E8E0" android:endColor="#EBA97D">
-    </gradient>
+    <gradient
+        android:startColor="#F2E8E0"
+        android:endColor="#EBA97D"
+        android:angle="45" /> <!-- Ensure angle is a multiple of 45 -->
 </shape>
