--- a/app/src/main/res/layout/activity_driver_dashboard.xml
+++ b/app/src/main/res/layout/activity_driver_dashboard.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ParentDashboardActivity"
+    tools:context=".DriverDashboardActivity"
     android:background="@drawable/bg_view_1">
 
     <View
         android:id="@+id/top_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layerType="software"
         android:background="@drawable/bg_view" />
 
     <GridLayout
@@ -26,6 +27,7 @@
         <!-- Card 1 -->
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
+            android:id="@+id/card_home"
             android:layout_height="150dp"
             app:cardCornerRadius="15dp"
             android:layout_row="0"
@@ -56,6 +58,7 @@
         <!-- Card 2 -->
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
+            android:id="@+id/veryfy_otp"
             android:layout_height="150dp"
             app:cardCornerRadius="15dp"
             android:layout_row="0"
@@ -86,6 +89,7 @@
         <!-- Card 3 -->
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
+            android:id="@+id/card_map"
             android:layout_height="150dp"
             app:cardCornerRadius="15dp"
             android:layout_row="1"
@@ -119,6 +123,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             app:cardCornerRadius="15dp"
+            android:id="@+id/confirm_activity"
             android:layout_row="1"
             android:layout_column="1"
             android:layout_margin="12dp"
@@ -147,6 +152,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
+            android:id="@+id/card_contact"
             android:layout_height="150dp"
             app:cardCornerRadius="15dp"
             android:layout_row="2"
@@ -176,6 +182,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="150dp"
+            android:id="@+id/card_terms"
             android:layout_height="150dp"
             app:cardCornerRadius="15dp"
             android:layout_row="2"
