--- a/app/src/main/res/layout/activity_driver_dashboard.xml
+++ b/app/src/main/res/layout/activity_driver_dashboard.xml
@@ -1,219 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DriverDashboardActivity"
-    android:background="@drawable/bg_view_1">
-
-    <View
-        android:id="@+id/top_view"
+    tools:context=".DriverDashboardActivity">
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layerType="software"
-        android:background="@drawable/bg_view" />
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:rowCount="3"
-        android:columnCount="2"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="-80dp"
-        android:layout_below="@id/top_view">
-
-        <!-- Card 1 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:id="@+id/card_home"
-            android:layout_height="150dp"
-            app:cardCornerRadius="15dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_margin="12dp"
-            app:cardElevation="12dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/ic_home"
-                    android:layout_gravity="center_horizontal"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Home"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/almendra_bold_italic"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <!-- Card 2 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:id="@+id/veryfy_otp"
-            android:layout_height="150dp"
-            app:cardCornerRadius="15dp"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:layout_margin="12dp"
-            app:cardElevation="12dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/otp"
-                    android:layout_gravity="center_horizontal"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Verify OTP"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/almendra_bold_italic"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <!-- Card 3 -->
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:id="@+id/card_map"
-            android:layout_height="150dp"
-            app:cardCornerRadius="15dp"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_margin="12dp"
-            app:cardElevation="12dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/maps"
-                    android:layout_gravity="center_horizontal"/>
-
-                <TextView
-                    android:layout_width="144dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:fontFamily="@font/almendra_bold_italic"
-                    android:text="Maps and Locations"
-                    android:textAlignment="center"
-                    android:textSize="25sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            app:cardCornerRadius="15dp"
-            android:id="@+id/confirm_activity"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_margin="12dp"
-            app:cardElevation="12dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/confirm_activity"
-                    android:layout_gravity="center_horizontal"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="   Confirm  Activity "
-                    android:textAlignment="center"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/almendra_bold_italic"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:id="@+id/card_contact"
-            android:layout_height="150dp"
-            app:cardCornerRadius="15dp"
-            android:layout_row="2"
-            android:layout_column="0"
-            android:layout_margin="12dp"
-            app:cardElevation="12dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/phone_24"
-                    android:layout_gravity="center_horizontal"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Contact"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/almendra_bold_italic"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="150dp"
-            android:id="@+id/card_terms"
-            android:layout_height="150dp"
-            app:cardCornerRadius="15dp"
-            android:layout_row="2"
-            android:layout_column="1"
-            android:layout_margin="12dp"
-            app:cardElevation="12dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:src="@drawable/terms"
-                    android:layout_gravity="center_horizontal"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Terms and Conditions"
-                    android:textAlignment="center"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="25sp"
-                    android:fontFamily="@font/almendra_bold_italic"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-
-
-
-    </GridLayout>
-
+        android:layout_height="wrap_content"
+        android:text="Home"/>
 </RelativeLayout>
