--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal"
-    tools:context=".VerifyOtpFragment"
+    tools:context=".VerifyOtpActivity"
     android:background="@color/teal_700">
 
     <!-- TODO: Update blank fragment layout -->
